--- a/ABS/ABS/ABS.Master
+++ b/ABS/ABS/ABS.Master
@@ -1,12 +1,15 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="ABS.Master.cs" Inherits="ABS.Site1" %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-au" lang="en-au">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-au" lang="en-au">
 <head id="Head1" runat="server">
     <title></title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <link rel="stylesheet" href="~/CSS/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="~/CSS/Site.css" type="text/css" />
+    
     <script src="~/JS/jquery-1.5.1.min.js" type="text/javascript"></script>
     <script src="~/JS/Site.js" type="text/javascript"></script>
 </head>
@@ -20,10 +23,10 @@
         <div class="wrapper">
             <div id="left">
                 <div class="module">
-                    <ul class="menu">
+                   <ul class="nav nav-tabs nav-stacked">
 	                    <li class="first"><a href="#">Home</a></li>
-	                    <li><a href="#">Login</a></li>
-	                    <li><a href="#">Sign Up</a></li>
+	                    <li><a href="Login.aspx">Login</a></li>
+	                    <li><a href="Signup.aspx">Sign Up</a></li>
 	                    <li><a href="#">Check Availability</a></li>
 	                    <li><a href="#">Make an Appointment</a></li>
 	                    <li class="last"><a href="#">Management</a></li>
