--- a/ABS/ABS/User.Master
+++ b/ABS/ABS/User.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.Master.cs" Inherits="ABS.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.Master.cs"  Inherits="ABS.Site1" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-au" lang="en-au">
 <head id="Head1" runat="server">
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="~/CSS/bootstrap.css" type="text/css" />
     
-    <link rel="stylesheet" href="~/CSS/Site.css" type="text/css" />
+   <%-- <link rel="stylesheet" href="~/CSS/Site.css" type="text/css" />--%>
     
     <script src="~/JS/jquery-1.5.1.min.js" type="text/javascript"></script>
     <script src="~/JS/Site.js" type="text/javascript"></script>
@@ -17,7 +17,7 @@
 <body>
     <div id="header">
         <div class="wrapper">
-            <img src="~/CSS/img/logo.jpg" id="logo" alt="Alternate Text"  runat="server"/>
+            
         </div>
     </div>
     <div id="content">
@@ -25,11 +25,12 @@
             <div id="left">
                 <div class="module">
                    <ul class="nav nav-tabs nav-stacked">
-	                    <li class="first"><a href="#">Home</a></li>
+	                    <li class="first"><a href="Home.aspx">Home</a></li>
 	                    <li><a href="Login.aspx">Login</a></li>
 	                    <li><a href="Signup.aspx">Sign Up</a></li>
-	                    <li><a href="#">Check Availability</a></li>
-	                    <li><a href="#">Make an Appointment</a></li>
+	                    <li><a href="CheckAvailability.aspx">Check Availability</a></li>
+	                    <li><a href="MakeAppointment.aspx">Make an Appointment</a></li>
+                        <li><a href="Management.aspx">Management</a></li>
 	                    
                     </ul> 
                 </div>
