--- a/ABS/ABS/App_Themes/user/user.css
+++ b/ABS/ABS/App_Themes/user/user.css
@@ -102,3 +102,4 @@ h1, .contentheading{
     padding:35px 0 0 35px;
     color:#8f8989;
 }
+.loginView{ color:White; float:right; width:auto; text-align:right; line-height:25px; padding:15px 5px;}
