--- a/ABS/ABS/User.Master
+++ b/ABS/ABS/User.Master
@@ -1,4 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.Master.cs" %>
+<%@ Register Src="~/NavControl.ascx" TagName="a" TagPrefix="b" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-au" lang="en-au">
 <head id="Head1" runat="server">
@@ -8,15 +9,23 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="~/CSS/bootstrap.css" type="text/css" />
-    
-   <%-- <link rel="stylesheet" href="~/CSS/Site.css" type="text/css" />--%>
-    
     <script src="~/JS/jquery-1.5.1.min.js" type="text/javascript"></script>
     <script src="~/JS/Site.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="header">
         <div class="wrapper">
+        <div class="loginView" style="">
+        <asp:LoginView ID="LoginView1" runat="server" >
+            <AnonymousTemplate>
+                You are not logged in. <a href="Login.aspx">Login</a>
+            </AnonymousTemplate>
+            <LoggedInTemplate>Welcome, 
+                <asp:LoginName ID="LoginName1" runat="server" /> 
+                
+            </LoggedInTemplate>
+        </asp:LoginView>
+            </div>
             
         </div>
     </div>
@@ -25,15 +34,13 @@
             <div id="left">
                 <div class="module">
                    <ul class="nav nav-tabs nav-stacked">
-	                    <li class="first"><a href="Home.aspx">Home</a></li>
-	                    <li><a href="Login.aspx">Login</a></li>
-	                    <li><a href="Signup.aspx">Sign Up</a></li>
-	                    <li><a href="CheckAvailability.aspx">Check Availability</a></li>
-	                    <li><a href="MakeAppointment.aspx">Make an Appointment</a></li>
-                        <li><a href="Management.aspx">Management</a></li>
-	                    
+                   <b:a ID="Navcontrol1" runat="server" />
+                   <asp:ContentPlaceHolder ID="LogggedInStatus" runat="server" />
+                   <asp:Label ID="Labelid" runat="server" />
+	                   
                     </ul> 
-                </div>
+                    
+                    </div>
             </div>
             <div id="main">
                 <h1 class="contentheading"><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></h1>
