--- a/ABS2/ABS2/App_Themes/User/User.css
+++ b/ABS2/ABS2/App_Themes/User/User.css
@@ -138,7 +138,15 @@ h2{
     padding: 15px 5px; 
     margin-right:15px;   
 }
-
+#MainContent_LoginView1_Login1 label
+{
+    margin-right:5px;
+}
+.loginView label, input[type=checkbox]
+{
+    float:left;
+    margin-right:10px;
+}
 #MainContent_MakeAppointmentWizard_SideBarContainer_SideBarList
 {
     width: 220px;
