--- a/ABS2/ABS2/App_Themes/Admin/Admin.css
+++ b/ABS2/ABS2/App_Themes/Admin/Admin.css
@@ -7,7 +7,7 @@ body, textarea {
 }
 body 
 {
-    background:#000;
+    background:#CCC;
 }
 textarea{
 	overflow:auto;
@@ -42,7 +42,7 @@ h1, .contentheading{
 #header .wrapper
 {
     border-bottom: 1px solid #373837;
-    background-color:#3399cc;
+    background-color: #66A3FF;
     height:115px;
     background-image:url(./images/abs-logo-admin.png);
     background-repeat:no-repeat;
@@ -61,9 +61,9 @@ h1, .contentheading{
 #left
 {
     width:210px;
-    min-height:526px;
-    background:url("~/Global/left-bg.jpg") no-repeat center top;
+    min-height:400px;
     border-top: 13px solid #fff;
+    padding-left: 15px;
 }
 #left .menu
 {
@@ -95,11 +95,61 @@ h1, .contentheading{
 {
     border-top:0 none;
 }
-
 #main
 {
-    width:715px;
-    padding:35px 0 0 35px;
+    width:530px;
+    padding:35px 35px 0 25px;
     color:#8f8989;
 }
-.loginView{ color:White; float:right; width:auto; text-align:right; line-height:25px; padding:15px 5px;}
+#right
+{
+    width:120px;
+    color:#8f8989;
+    padding:40px 0 0 25px;
+}
+#right ul.internal-nav 
+{
+    margin:0;
+}
+#right .internal-nav li
+{
+    list-style:none none;
+}
+#footer .wrapper
+{
+    background: #ffffff;
+    border-radius: 0 0 15px 15px;
+    min-height: 50px;
+    padding: 15px 0 0 0;
+}
+#footer hr
+{
+    margin: 0 15px;
+}
+#footer p
+{
+    text-align:right;
+    margin-top:15px;
+    margin-right:15px;
+    font-size:11px;
+    color: #8F8989;
+}
+.loginView
+{
+    color: white;
+    float: right;
+    width: auto;
+    text-align: right;
+    margin-top: 70px;
+    padding: 15px 5px; 
+    margin-right:15px;   
+}
+#MainContent_LoginView1_Login1 label
+{
+    margin-right:5px;
+}
+.loginView label, input[type=checkbox]
+{
+    float:left;
+    margin-right:10px;
+}
