--- a/ABS2/ABS2/App_Themes/Admin/Admin.css
+++ b/ABS2/ABS2/App_Themes/Admin/Admin.css
@@ -178,3 +178,12 @@ h2
 {
     width:200px;
 }
+
+#MainContent_grdAppointmentDetails th
+{
+    display:none;
+}
+#MainContent_grdAppointmentDetails td
+{
+    padding:10px 15px;
+}
